--- a/app/config.py.example
+++ b/app/config.py.example
@@ -21,6 +21,13 @@ api_key = "yourheadasplode"
 debug = True
 
 ########################################################################################################################
+## Flask Configuration Definitions
+########################################################################################################################
+
+RECAPTCHA_PUBLIC_KEY = '6LeYIbsSAAAAACRPIllxA7wvXjIE411PfdB2gt2J'
+RECAPTCHA_PRIVATE_KEY = '6LeYIbsSAAAAAJezaIq3Ft_hSTo0YtyeFG-JgRtu'
+
+########################################################################################################################
 ## Mail Host Configuration Definitions
 ########################################################################################################################
 # smtplib config
