--- a/app/config.py.example
+++ b/app/config.py.example
@@ -24,6 +24,7 @@ debug = True
 ## Flask Configuration Definitions
 ########################################################################################################################
 
+RECAPTCHA_DATA_ATTRS = {'theme': 'light', 'size': 'compact'}
 RECAPTCHA_PUBLIC_KEY = '6LeYIbsSAAAAACRPIllxA7wvXjIE411PfdB2gt2J'
 RECAPTCHA_PRIVATE_KEY = '6LeYIbsSAAAAAJezaIq3Ft_hSTo0YtyeFG-JgRtu'
 
